# note

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: build.yml  release.yml
src/backend/: mod.rs  sqlite.rs
src/core/: mod.rs
src/core/collection/: model.rs  service.rs
src/core/note/: model.rs  service.rs
